# powergrid

./: .gitignore  README.md  pyproject.toml
powergrid/: .env.example  FINDINGS.md  FINDINGS_PGLIB.md  README.md  benchmark_config.pglib_gpt54.yaml  benchmark_config.v1.yaml  benchmark_config.v2.yaml  presentation_findings_v1.md  problems.jsonl  pyproject.toml
powergrid/dispatch/: __init__.py  benchmark.py  evaluate.py  generate.py  types.py  verify.py
powergrid/dispatch/tests/: __init__.py  test_benchmark.py  test_dispatch.py
powergrid/pglib_benchmark_runs/: 2026-03-15_20-36-55_openai_gpt-5.4-pro_problems.jsonl  2026-03-15_20-38-30_openai_gpt-5.4-pro_results.json  scores.yaml
powergrid/v1_benchmark_runs/: 2026-03-15_19-29-51_anthropic_claude-sonnet-4.5_results.json  2026-03-15_19-29-51_anthropic_claude-sonnet-4.6_results.json  2026-03-15_19-29-51_mistralai_mistral-large-2512_results.json  2026-03-15_19-29-51_openai_gpt-4o_problems.jsonl  2026-03-15_19-29-51_openai_gpt-4o_results.json  2026-03-15_19-29-51_openai_gpt-5-nano_results.json  2026-03-15_19-29-51_openai_gpt-5.4-pro_results.json  benchmark_analysis.ipynb  scores.yaml
powergrid/v2_benchmark_runs/: 2026-03-15_19-50-16_anthropic_claude-opus-4.6_results.json  2026-03-15_19-50-16_anthropic_claude-sonnet-4.5_results.json  2026-03-15_19-50-16_anthropic_claude-sonnet-4.6_results.json  2026-03-15_19-50-16_openai_gpt-5-nano_results.json  2026-03-15_19-50-16_openai_gpt-5.4-pro_problems.jsonl  2026-03-15_19-50-16_openai_gpt-5.4-pro_results.json  benchmark_analysis.ipynb  scores.yaml
werewolf/: README.md  (+1 more)
(+4 files in other folders)
